--- a/TODOAPI-SPRINGBOOT/pom.xml
+++ b/TODOAPI-SPRINGBOOT/pom.xml
@@ -18,6 +18,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>TODOAPI-SPRINGBOOT</name>
     <description>Spring Boot To-do Project</description>
+    <packaging>war</packaging>
+
 
     <properties>
         <java.version>21</java.version>
